--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -20,6 +20,8 @@ growthbook:
     - API_HOST=http://<my ip>:3100
 ```
 
+**Important**: In order for authentication cookies to work correctly, the 2 domains must be considered the "same site". They can be on different subdomains or ports, but the top level domain must be the same. So `growthbook.example.com` and `growthbook-api.example.com` will work, but `growthbook.com` and `growthbook-api.com` will not.
+
 If you need to change the ports on your local dev environment (e.g. if `3000` is already being used),
 you need to update the above variables AND change the port mapping in `docker-compose.yml`:
 
